--- a/app/views/partials/_jumbotron.html.haml
+++ b/app/views/partials/_jumbotron.html.haml
@@ -1,6 +1,6 @@
 .jumbotron
     .jumbo-bg
-        = video_tag('Space.mp4', :controls => false, :autoplay => true, :loop => true, :height => "100%", :width => "100%", :class => "jumbo-video")
+        = video_tag('Space520.mp4', :controls => false, :autoplay => true, :loop => true, :height => "100%", :width => "100%", :class => "jumbo-video")
     .jumbotron-content.text-white
         %h1.display-3
             CCIX15 
