--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,6 @@
 
 .content {
     width: 90%;
-    border: 2px solid green;
 }
 
 .col-sm {
@@ -79,16 +78,92 @@
     margin-bottom: 25px;
 }
 
+// Pct Change Board
+
+.dailyChg {
+    display: flex;
+    margin: 0 auto;
+    width: 95%;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+.icoStats {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    text-align: center;
+}
+
+// Price & ICO Board
+
 .table {
     width: 50%;
     margin: 20px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
-.quote-container {
+.content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.quotes, .timeline {
+    margin-top: 20px;
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.charts {
+    margin-top: 20px;
+    height: 70vh;
+    background: #4B79A1;  
+    background: -webkit-linear-gradient(to right, #283E51, #4B79A1);  
+    background: linear-gradient(to right, #283E51, #4B79A1); 
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.chartset {
+    background: white;
+    height: 72%;
+    border-radius: 4px;
+    border: 2px solid green;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    order: 2;
+}
+
+.return {
+    height: 60%;
+    width: 30%;
+    order: 1;
+    color: white;
+}
+
+.recharts-wrapper, .recharts-default-legend {
+    margin: 0 auto;
+    padding-top: 5%;
+}
+
+
+.footer {
+    background: #4B79A1;  
+    background: -webkit-linear-gradient(to right, #283E51, #4B79A1);  
+    background: linear-gradient(to right, #283E51, #4B79A1); 
+    height: 30vh;
+}
+
+.container {
     height: 75vh;
     width: 100%;
-    border: 2px solid orange;
     display: flex;
     justify-content: space-around;
 }
@@ -157,9 +232,9 @@
 }
 
 .navset{
+    padding-top: 30px;
     width: 48%;
     height: 100%;
-    border: 2px solid red;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -179,3 +254,50 @@
     flex-direction: column;
     text-align: center;
 }
+
+
+// Contract Component
+
+.contract {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: 82vh;
+    margin-top: 20px;
+}
+
+.tokenCode {
+    background-image: url('CoinCoder.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 90%;
+    width: 50%;
+}
+
+.codePitch {
+    height: 80%;
+    width: 30%;
+}
+
+// TimeLine
+
+.timeline {
+    background: #ECECEC;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.timelineContent {
+    width: 80%;
+    background-image: url('Timeline.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    height: 60%;
+}
+
